syntax = "proto3";

option csharp_namespace = "grpc_backend";

package greet;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SystemTime (TimeStreamRequest) returns (stream TimestampReply);
  rpc ClientTime (stream TimestampReply) returns (TimeStampCollection);
  rpc TimeExchange (stream TimestampReply) returns (stream TimestampReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message TimeStreamRequest {
	int32 timeout = 1;
}

message TimestampReply {
	int64 timestamp = 1;
}

message TimeStampCollection {
	repeated TimestampReply timestamps = 1;
}
